--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="/script.js"></script>
+    <title>MY DESIGN</title>
+</head>
+<body onload="hel()">
+    <header>
+        <div class="logo">
+            <div class="logotxt">Landing Page </div>
+        </div>
+        <nav>
+         <ul>
+            <a href="#">HOME</a>
+            <a href="#services">SERVICES</a>
+            <a href="#founders">ABOUT</a>
+            <a href="#footer">CONTACT US</a>
+         </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="bgimg" id="bg"></div>
+        <div id="services"></div>
+        <div class="ourservices headings" >Our Services</div>      
+          <div class="services service1"></div>
+          <div class="services service2"></div>
+          <div class="services service3"></div>
+          <div class="services service4"></div>
+          <div class="services service5"></div>
+          <div class="services service6"></div> 
+          
+          <div id="founders"></div>
+          <!-- founders heading -->
+       <div class="headings">Founders</div>    
+          <div class="founders"  >
+            <div class="founder-img-box">
+              <div class="founders-img f1"></div>
+            </div>
+        
+            <div class="founders-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis nesciunt corrupti culpa.</div>
+          </div>     
+          <div class="founders">
+            <div class="founders-img  f2"></div>
+            <div class="founders-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis nesciunt corrupti culpa.</div>
+          </div>     
+          <div class="founders">
+            <div class="founders-img  f3"></div>
+            <div class="founders-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis nesciunt corrupti culpa.</div>
+          </div>     
+          <div class="founders">
+            <div class="founders-img  f5"></div>
+            <div class="founders-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis nesciunt corrupti culpa.</div>
+          </div>     
+          <div class="founders">
+            <div class="founders-img  f4"></div>
+            <div class="founders-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis nesciunt corrupti culpa.</div>
+          </div>     
+    </main>
+    <div id="footer"></div>
+    <footer>
+      <div class="upper">
+       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus </div>
+       <div class="text">orem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus suscipit, maxime voluptatum?</div>
+       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus suscipit, maxime voluptatum? psum dolor sit</div>
+      </div>
+      <div class="bottom">&copy; NA DEVELOPERS PVT LTD</div>
+    </footer>
+</body>
+</html>
+
 
