--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,1 +1,50 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title> 
+</head>
+<body>
+    <h1 style="text-align: center; margin-top: 10px; color: cornsilk;" >Calculator</h1>
+    <div class="calc-container">
+        <input type="text"class="input-area"  id="input">
+      
+        <div class="row">
+            <h2 class="brand">NA Developers</h2>
+            <hr >
+            <button style="color: orange;">C</button>
+            <button class="c-green">!</button>
+            <button class="c-green">%</button>
+            <button class="c-green">/</button>
+        </div>
+        
+        <div class="row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="c-green">*</button>
+        </div>
+        <div class="row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="c-green" >-</button>
+        </div>
+        <div class="row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="c-green">+</button>
+        </div>
+        <div class="row">
+            <button>+/-</button>
+            <button>0</button>
+            <button>.</button>
+            <button class="c-green" style="background-color: rgb(62, 178, 62);">=</button>
+        </div>
+    </div>
+    <script src="/script.js"></script>
+</body>
+</html>
